# Crosslive

./: .gitignore
client/: Cargo.toml
client/src/: client_config.rs  handler.rs  main.rs
client/src/features/: linux_clipboard.rs  mod.rs  win_clipboard.rs
client_lib/: Cargo.toml
client_lib/src/: handler.rs  lib.rs  poll.rs
cross_messages/: Cargo.toml
cross_messages/src/: lib.rs  tcp.rs
crosslogging/: Cargo.toml
crosslogging/src/: lib.rs
master_lib/: Cargo.toml
master_lib/src/: handler.rs  lib.rs
master_server/: Cargo.toml
master_server/src/: main.rs  master_config.rs
