[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
client_lib = { version = "0.1.0", path = "../client_lib" }
config = { version = "0.13.3", default-features = false, features = ["toml"] }
copypasta = "0.10.0"
cross_messages = { version = "0.1.0", path = "../cross_messages" }
dirs = "5.0.1"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["rt"] }
