[package]
name = "client_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
cross_messages = { version = "0.1.0", path = "../cross_messages" }
rayon = "1.8.0"
tokio = { version = "1.33.0", features = ["full"] }
