[package]
name = "crosslogging"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
fern = { version = "0.6.2", features = ["colored"] }
humantime = "2.1.0"
log = "0.4.20"
