[package]
name = "master_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
cross_messages = { version = "0.1.0", path = "../cross_messages" }
log = { version = "0.4.20", features = ["serde"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
